@@ -12,6 +12,7 @@
   * Mixin#super also checks for a real defined method in parent
   * Rename Mixin to Object
   * Derived classes from Object look for a method called finalize to use as their destructors
+  * Rename Object#mixin_* to Object#included_*
 
 2009-03-10 - Sean Huber (shuber@huberry.com)
   * Initial commit
